Fix dinner dance table selection overflow.

--- a/client/app/styles/events.styl
+++ b/client/app/styles/events.styl
@@ -96,6 +96,12 @@ iframe.map {
   table {
     text-align: center;
     cursor: pointer;
+
+    td {
+      white-space: nowrap;
+      max-width: 0em;
+      overflow-x: hidden;
+    }
   }
 
   .save-info-wrapper {
